Add support for itemtypes in the bundles